<resources>
    <string name="app_name">Quiz App</string>
    <string name="app_name_caps">QUIZ APP</string>

    <!-- Start screen strings -->
    <string name="welcome_text">Welcome to Quiz App!\nPress start to begin.</string>
    <string name="start_text">Start</string>
    <string name="leaderboard_text">Leaderboard</string>

    <!-- Quiz strings -->
    <string name="time_left_text">Time Left:</string>
    <string name="start_time">01:00</string>
    <string name="sample_question">How much wood would a wood chuck chuck if a wood chuck could chuck wood?</string>
    <string name="sample_index">2 of 12</string>
    <string name="sample_answer_A">7 wood</string>
    <string name="sample_answer_B">A little</string>
    <string name="sample_answer_C">A lot</string>
    <string name="sample_answer_D">None of the above</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="finish">Finish</string>

    <!-- Post-Quiz Strings -->
    <string name="good_job_text">Good job!</string>
    <string name="bad_job_text">Better luck next time!</string>
    <string name="perfect_job_text">Perfection!</string>
    <string name="try_again">Try again</string>
    <string name="sample_num_correct">You got 8 right</string>
    <string name="sample_num_incorrect">You got 4 wrong</string>
    <string name="sample_percentage">67%</string>
    <string name="sample_time_taken">in 33 seconds</string>
    <string name="new_high_score">New high score!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="login_description">Log in or register to save your high scores to the cloud and appear on the leaderboard.</string>
    <string name="logout_description">You are currently logged in.</string>

    <!-- Leaderboard Strings -->
    <string name="header_username">Username</string>
    <string name="header_percentage">Percentage</string>
    <string name="header_seconds">Seconds</string>

    <!-- Dialog Strings -->
    <string name="starting_dialog">You have 60 seconds to answer a set of questions.
        Swipe left or right or use the buttons at the bottom to navigate through the questions. Tap "Finish" at the end when you are done. Good luck!</string>

</resources>
