<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.levipayne.quizapp.QuizActivity"
    android:id="@+id/main_container">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_container"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_left_text"
            android:id="@+id/time_left_descr"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/progress_bar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:progress="0"
            android:max="6000"
            android:indeterminate="false"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:longClickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/start_time"
            android:id="@+id/time_left"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/material_grey_900" />
    </LinearLayout>

    <include layout="@layout/question_container_layout"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next_button"
        android:layout_alignTop="@+id/prev_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minWidth="75dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:id="@+id/prev_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="75dp" />

    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewAnimator"
        android:layout_below="@+id/progress_container"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/next_button">

    </ViewAnimator>

</RelativeLayout>
